--- a/README.html
+++ b/README.html
@@ -24,32 +24,60 @@
     </head>
     <body class="vscode-body">
         <h1 id="csun-spring-2021">CSUN SPRING 2021</h1>
-<table>
-<thead>
-<tr>
-<th>BIO 106L</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>BIO 106</td>
-</tr>
-<tr>
-<td>---------</td>
-</tr>
-<tr>
-<td>A2</td>
-</tr>
-<tr>
-<td>---------</td>
-</tr>
-<tr>
-<td>A3</td>
-</tr>
-</tbody>
-</table>
-<pre><code><code><div>git push -u origin main
-</div></code></code></pre>
+<hr>
+<pre><code class="language-bash"><div>git push -u origin main
+</div></code></pre>
+<hr>
+<h2 id="bio-106">BIO 106</h2>
+<ul class="contains-task-list">
+<li class="task-list-item"><input class="task-list-item-checkbox" disabled="" type="checkbox"> 6.1 Mendelian Genetics (Lecture 20:52)</li>
+<li class="task-list-item"><input class="task-list-item-checkbox" disabled="" type="checkbox"> 6.2 Mendel's Principle of Segregation (Lecture 8:15)</li>
+<li class="task-list-item"><input class="task-list-item-checkbox" disabled="" type="checkbox"> Mendelian Genetics (Reading)</li>
+<li class="task-list-item"><input class="task-list-item-checkbox" disabled="" type="checkbox"> Inheritance (I) (Connect)</li>
+<li class="task-list-item"><input class="task-list-item-checkbox" disabled="" type="checkbox"> 6.3 Mendel's Principle of Independent Assortment (Lecture 4:42)</li>
+<li class="task-list-item"><input class="task-list-item-checkbox" disabled="" type="checkbox"> 6.4 Chromosome Theory of Inheritance (Lecture 8:01)</li>
+<li class="task-list-item"><input class="task-list-item-checkbox" disabled="" type="checkbox"> Quiz 7 (due Sept. 27) Note: you can do this quiz after completing all of the prior items in this section</li>
+<li class="task-list-item"><input class="task-list-item-checkbox" disabled="" type="checkbox"> 6.5 Beyond Mendel (Lecture 43:16)</li>
+<li class="task-list-item"><input class="task-list-item-checkbox" disabled="" type="checkbox"> 6.6 Solving Genetics Problems (Problem set and Video of Solutions)</li>
+<li class="task-list-item"><input class="task-list-item-checkbox" disabled="" type="checkbox"> Chromosomes and Inheritance (Reading)</li>
+<li class="task-list-item"><input class="task-list-item-checkbox" disabled="" type="checkbox"> Inheritance (II) (Connect)</li>
+<li class="task-list-item"><input class="task-list-item-checkbox" disabled="" type="checkbox"> Quiz 8 (due Feb. 28)</li>
+<li class="task-list-item"><input class="task-list-item-checkbox" disabled="" type="checkbox"> Quiz 9 (due Feb. 8)</li>
+</ul>
+<hr>
+<h2 id="bio-106l">BIO 106L</h2>
+<hr>
+<h2 id="comp-300">COMP 300</h2>
+<ul class="contains-task-list">
+<li class="task-list-item"><input class="task-list-item-checkbox" disabled="" type="checkbox"> Essay #4</li>
+</ul>
+<hr>
+<h2 id="comp-322">COMP 322</h2>
+<ul class="contains-task-list">
+<li class="task-list-item"><input class="task-list-item-checkbox" disabled="" type="checkbox"> Zybook Ch 3,4</li>
+</ul>
+<hr>
+<h2 id="comp-322l">COMP 322L</h2>
+<ul class="contains-task-list">
+<li class="task-list-item"><input class="task-list-item-checkbox" disabled="" type="checkbox"> Zybook Ch 3,4</li>
+</ul>
+<hr>
+<h2 id="comp-491l">COMP 491L</h2>
+<ul class="contains-task-list">
+<li class="task-list-item"><input class="task-list-item-checkbox" disabled="" type="checkbox"> Lab 1</li>
+</ul>
+<hr>
+<h2 id="phys-220b">PHYS 220B</h2>
+<ul class="contains-task-list">
+<li class="task-list-item"><input class="task-list-item-checkbox" disabled="" type="checkbox"> Ch 24 HW</li>
+<li class="task-list-item"><input class="task-list-item-checkbox" disabled="" type="checkbox"> Ch 24 Recitation</li>
+</ul>
+<hr>
+<h2 id="phys-220bl">PHYS 220BL</h2>
+<ul class="contains-task-list">
+<li class="task-list-item"><input class="task-list-item-checkbox" disabled="" type="checkbox"> Wednesday Pick Kit at 13:00</li>
+<li class="task-list-item"><input class="task-list-item-checkbox" disabled="" type="checkbox"> Lab 3</li>
+</ul>
 
     </body>
     </html>
